# union

./: .gitignore  Cargo.toml  LICENSE  README.md  can.did  deploy.sh  dfx.json  package.json
deployer-backend/: Cargo.toml  can.did
deployer-backend/canister/: Cargo.toml  build.sh  can.did
deployer-backend/canister/src/: actor.rs
deployer-backend/canister/src/common/: deployer.rs  guards.rs  mod.rs  types.rs  utils.rs
deployer-backend/clients/rust/: Cargo.toml
deployer-backend/clients/rust/src/: api.rs  client.rs
deployer-backend/src/: actor.rs
deployer-backend/src/common/: deployer.rs  guards.rs  mod.rs  types.rs  utils.rs
gateway/backend/: Cargo.toml  build.sh  can.did  dfx.json
gateway/backend/src/: actor.rs  guards.rs
gateway/backend/src/common/: api.rs  gateway.rs  mod.rs  types.rs
history-ledger/canister/: Cargo.toml  build.sh  can.did  dfx.json
history-ledger/canister/src/: actor.rs  types.rs
history-ledger/canister/src/controller/: events.rs  mod.rs  program_execution.rs  share_move.rs  voting_execution.rs
history-ledger/canister/src/repository/: mod.rs
history-ledger/canister/src/service/: cron.rs  events.rs  mod.rs  program_execution.rs  shares_move.rs  voting_execution.rs
scripts/util/: .gitignore  Cargo.toml  README.md  build.sh  canister.rs  did.rs  main.rs  utils.rs
shared/: Cargo.toml
shared/src/: candid.rs  lib.rs  mvc.rs  pageable.rs  remote_call.rs  sorted_by_timestamp.rs  test.rs  time.rs  validation.rs
shared/src/types/: history_ledger.rs  mod.rs  wallet.rs
wallet-backend/: Cargo.toml  build.sh  can.did
wallet-backend/e2e/: dfx.json  tsconfig.json
wallet-backend/e2e/src/: utils.ts  wallet.spec.ts
wallet-backend/src/: actor.rs  api.rs  guards.rs  helpers.rs  state.rs
wallet-backend/src/client/: mod.rs
wallet-backend/src/common/: execution_history.rs  mod.rs  permissions.rs  profiles.rs  rc_bytes.rs  roles.rs  streaming.rs  utils.rs
wallet-backend/src/controller/: mod.rs
wallet-backend/src/controller/access_config/: api.rs  mod.rs
wallet-backend/src/controller/group/: api.rs  mod.rs
wallet-backend/src/controller/history_ledger/: api.rs  mod.rs
wallet-backend/src/controller/nested_voting/: api.rs  mod.rs
wallet-backend/src/controller/nested_voting_config/: api.rs  mod.rs
wallet-backend/src/controller/permission/: api.rs  mod.rs
wallet-backend/src/controller/profile/: api.rs  mod.rs
wallet-backend/src/controller/settings/: api.rs  mod.rs
wallet-backend/src/controller/streaming/: api.rs  mod.rs
wallet-backend/src/controller/voting/: api.rs  mod.rs
wallet-backend/src/controller/voting_config/: api.rs  mod.rs
wallet-backend/src/repository/: mod.rs
wallet-backend/src/repository/access_config/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/batch/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/choice/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/chunk/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/group/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/nested_voting/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/nested_voting_config/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/permission/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/profile/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/query_config/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/settings/: mod.rs
wallet-backend/src/repository/streaming/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/token/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/voting/: mod.rs  model.rs  types.rs
wallet-backend/src/repository/voting_config/: mod.rs  model.rs  types.rs
wallet-backend/src/service/: _profile.rs  _voting.rs  cron.rs  group.rs  history_ledger.rs  mod.rs  permission.rs  profile.rs  streaming.rs  voting.rs  voting_config.rs
wallet-backend/src/service/access_config/: crud.rs  mod.rs  types.rs
wallet-backend/src/service/choice/: crud.rs  mod.rs  types.rs
wallet-backend/src/service/cron/: mod.rs
wallet-backend/src/service/events/: events.rs  mod.rs
wallet-backend/src/service/group/: crud.rs  mod.rs  types.rs
wallet-backend/src/service/history_ledger/: mod.rs
wallet-backend/src/service/nested_voting/: crud.rs  mod.rs  types.rs
wallet-backend/src/service/nested_voting_config/: crud.rs  (+2 more)
wallet-backend/src/settings/: mod.rs
(+730 files in other folders)
