[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.5.0"
candid = "0.7.14"
serde = "1.0.136"
async-trait = "0.1.53"
ic-event-hub = "0.3.1"
ic-event-hub-macros = "0.3.1"