[package]
name = "union-wallet"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.4.0"
ic-cdk-macros = "0.4.0"
serde = "1.0.136"
candid = "0.7.13"
ic-cron = "0.6.1"
serde_bytes = "0.11.5"
async-trait = "0.1.53"