[package]
name = "union-deployer"
version = "0.1.0"
authors = ["Александр Втюрин <senior.joinu@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
crate-type = ["cdylib"]
path = "src/actor.rs"

[dependencies]
async-trait = "0.1.51"
chrono = "0.4.19"
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
serde = "1.0.136"
candid = "0.7.14"
shared = { path = "../../shared" }
union-deployer-client = { path = "../clients/rust" }