[package]
name = "union-history-ledger"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.0"
ic-cdk-macros = "0.5.0"
serde = "1.0.136"
candid = "0.7.14"
shared = { path = "../../shared" }