[package]
name = "union-wallet-caller"
version = "0.0.1"
edition = "2018"

[[bin]]
name = "uwc"
path = "main.rs"

[dependencies]
ic-agent = "0.12.1"
ic-types = "0.3.0"
candid = { version = "0.7.10", features = [ "random" ] }
clap = { version = "3.1.6", features = [ "derive" ] }
garcon = { version = "0.2", features = ["async"] }
hex = {version = "0.4.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
shellexpand = "2.1.0"
serde = "1.0"